# LLM-on-Wheels

./: .env.example  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: implementation.prompt.md
GraphAgent/: main.py
GraphAgent/config/: constants.py  prompts.py
GraphAgent/core/: graph.py  interfaces.py  nodes.py  state.py
GraphAgent/llm/: coord_detection.py  intent_detection.py  service.py
GraphAgent/utils/: audio.py
src/: main_simulation.py
src/GraphAgent/: main.py
src/GraphAgent/config/: constants.py  prompts.py
src/GraphAgent/core/: graph.py  interfaces.py  nodes.py  state.py
src/GraphAgent/llm/: action_execution.py  coord_detection.py  final_response.py  intent_detection.py  memory_querying.py  service.py
src/GraphAgent/utils/: audio.py  misc.py
src/Simulator/: simulation_api.py  simulation_core.py
