[project]
name = "llm-on-wheels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=1.57.0",
    "groq>=0.22.0",
    "langchain>=0.3.23",
    "langchain-core>=0.3.54",
    "langchain-groq>=0.3.2",
    "langgraph~=0.2.26",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
]
